Advance Templating. 01.Using handlebar Partials

--- a/03.Web-Servers-and-Application-Deployment/views/about.hbs
+++ b/03.Web-Servers-and-Application-Deployment/views/about.hbs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Some Website</title>
+    <title>Help Page</title>
 </head>
 <body>
-    <h1>{{pageTitle}}</h1>
-    <p>{{wellcomeMessage}} </p>
+    {{> header}}
 
-    <footer>Copyright@{{currentYear}}</footer>
+    <p>{{wellcomeMessage}}</p>
+
+    {{> footer}}
 </body>
 </html>
